--- a/style.css
+++ b/style.css
@@ -1,34 +1,69 @@
-body {
-    margin: 0;
+* {
+    box-sizing: border-box;
     padding: 0;
+    margin: 0;
+}
+body {
+    background-color: aquamarine;
+    background-image: url("magical-background.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1 {
+    color: darkblue;
+    text-align: center;
+    font-size: 48px;
+}
+
+h2 {
+    text-align: center;
+    color: aquamarine;
+    font-size: 36px;
+}
+
+header {
+    margin: 20px;
+
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-content: stretch;
+    flex-direction: column;
+    background-color: none;
+    margin: 0 auto;
+    padding: 0px;
+}
 
-    background-color: blue;
-    margin: 10px auto;
-    padding: 3px 0px;
+.row {
+    display: flex;
+    background-color: none;
+    justify-content: space-evenly;
+    /* margin: 1px; */
 }
 
 .grid {
-    background-color: orange;
-    margin: 1.1px;
+    background-color: #222;
+    transition: 0.1s;
 }
 
-.grid.hover {
-    background-color: yellow;
-}
-
-.button {
+.button-container {
     display: flex;
     justify-content: center;
     margin: 10px;
 }
 
-#reset {
+button {
     width: 100px;
     height: 50px;
+}
+
+.mode {
+    width: 400px;
+    color: wheat;
+    margin: 0 auto;
 }
